--- a/style.css
+++ b/style.css
@@ -45,9 +45,16 @@ body {
     height: 19px;
 }
 
+
+
+
 .liens {
+    position: relative;
     display: flex;
-    gap: 67px;
+    /* gap: 67px; */
+    justify-content: space-around;
+    padding-right: 77px;
+    padding-left: 77px;
 
 }
 
@@ -57,16 +64,24 @@ body {
     font-weight: 500;
     border-top: 2px;
     border-top-style: solid;
-    border-top-color: red;
-    padding-left: 10px;
-    padding-right: 10px;
+    border-top-color: transparent;
+    /* padding-left: 25px;
+    padding-right: 25px; */
     padding-top: 44px;
 
 }
 
 .link_hebergement_marseilles :hover {
+    position: relative;
     color: #0065FC;
-    border-color: #0065FC;
+    border-top-color: #0065FC;
+    border-top: 2px;
+    border-top-style: solid;
+    border-top-color: #0065FC;
+
+
+
+    padding-top: 44px;
 
 }
 
@@ -75,17 +90,25 @@ body {
     font-weight: 500;
     border-top: 2px;
     border-top-style: solid;
-    border-top-color: red;
+    border-top-color: transparent;
     padding-left: 34.45px;
     padding-right: 34.45px;
     padding-top: 44px;
-    margin-right: 77px;
+    /* margin-right: 77px; */
 
 
 }
 
 .link_activités_marseilles :hover {
     color: #0065FC;
+    position: relative;
+    color: #0065FC;
+    border-top-color: #0065FC;
+    border-top: 2px;
+    border-top-style: solid;
+    border-top-color: #0065FC;
+
+    padding-top: 44px;
 }
 
 
@@ -123,7 +146,7 @@ body {
         display: flex;
         padding-top: 48px;
         justify-content: space-evenly;
-        padding-left: 33px;
+
 
 
     }
@@ -132,27 +155,34 @@ body {
 
 @media screen and (max-width: 768px) {
     .link_hebergement_marseilles {
+        position: relative;
         border-top: none;
         padding-top: 0px;
         padding-bottom: 23px;
         border-bottom: 3px;
         border-bottom-style: solid;
-        border-bottom-color: rgb(0, 17, 255);
+        border-bottom-color: transparent;
     }
 
 }
 
 @media screen and (max-width: 768px) {
     .link_activités_marseilles {
+        position: relative;
         border-top: none;
         padding-top: 0px;
         padding-bottom: 23px;
         border-bottom: 3px;
         border-bottom-style: solid;
-        border-bottom-color: rgb(0, 17, 255);
+        border-bottom-color: transparent;
     }
 
 }
+
+
+
+
+
 
 
 
@@ -246,68 +276,37 @@ body {
 .filtres {
     position: relative;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
     padding-top: 46px;
+    padding-right: 20px;
 
     text-align: center;
     align-items: center;
-    gap: 32px;
+    justify-content: space-evenly;
 
 }
 
-.filtres div.economique:hover {
+.e:hover {
     background-color: #DEEBFF;
 }
 
-.filtres div.familial:hover {
-    background-color: #DEEBFF;
-}
 
-.filtres div.romantique:hover {
-    background-color: #DEEBFF;
-}
-
-.filtres div.animaux_autorisés:hover {
-    background-color: #DEEBFF;
-}
 
 .filter {
     border: 0;
     font-weight: 700;
     font-size: 17px;
     line-height: 20px;
-    padding-right: 32px;
-    padding-left: 62px;
-
-}
-
-
-
-.economique {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-
-    padding: 14 20 14 20;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 20px;
-    border: 2px solid #D9D9D9;
-    border-radius: 55px;
-    gap: 10px;
-
-
-
 
 
 }
 
-
-.familial {
+.e {
     position: relative;
     display: flex;
     flex-direction: row;
+
     padding: 14 20 14 20;
     font-weight: 700;
     font-size: 17px;
@@ -317,36 +316,6 @@ body {
     gap: 10px;
 }
 
-
-.romantique {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    padding: 14 20 14 20;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 20px;
-    border: 2px solid #D9D9D9;
-    border-radius: 25px;
-    gap: 10px;
-}
-
-
-
-.animaux_autorisés {
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    padding: 14 20 14 20;
-    font-weight: 700;
-    font-size: 17px;
-    line-height: 20px;
-    border: 2px solid #D9D9D9;
-    border-radius: 25px;
-    gap: 10px;
-    flex-shrink: 0;
-
-}
 
 
 .information {
@@ -363,7 +332,10 @@ body {
 
 
 
+
+
 .information img {
+    position: relative;
     box-sizing: content-box;
     border-style: solid;
     padding: 7 10 7 10;
@@ -378,11 +350,84 @@ body {
     font-weight: 400;
 }
 
+/* TABLETTE */
+
+@media screen and (max-width: 992px) {
+    .filtres {
+        position: relative;
+
+
+        justify-content: space-evenly;
+        flex-wrap: nowrap;
+
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .filter p {
+        display: flex;
+        padding-right: 10px;
+    }
+}
+
+/* TELEPHONE */
+
+@media screen and (max-width: 768px) {
+    .filtres {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        max-height: calc(100% - 5em);
+        /* height: 300px; */
+        gap: 10px 10px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .filter {
+        display: flex;
+        justify-content: flex-start;
+        padding-left: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .filter p {
+        display: flex;
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .e {
+        align-items: center;
+        padding: 14 10 14 10;
+
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 16px;
+
+
+
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .information {
+        position: relative;
+        padding: 20px;
+        padding-top: 20px;
+    }
+}
 
 
 
 
 
+
+/* SECTION MARSEILLES */
 
 
 
@@ -390,10 +435,12 @@ body {
 
 
 .hôtel_marseilles {
+    position: relative;
     display: flex;
-
+    padding-left: 50px;
     gap: 40px;
-    margin-top: 39px;
+    padding-top: 40px;
+
 }
 
 @media screen and (max-width: 992px) {
@@ -409,40 +456,51 @@ body {
 #hébergement_marseilles {
 
     position: relative;
-
-    margin-left: 50px;
+    align-content: center;
+    padding-top: 42px;
+    padding-left: 40px;
+    padding-bottom: 46px;
+    padding-right: 40px;
+    justify-content: center;
     background: #F2F2F2;
-    width: 880px;
-    height: 626px;
+    width: 70%;
     border-radius: 20px;
+    align-items: center;
+}
+
+#hébergement_marseilles h3 {
+    display: flex;
+    position: relative;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 26px;
+    padding-top: 40px;
 }
 
 #hébergement_marseilles h2 {
     display: flex;
     position: relative;
-    margin-left: 40px;
-    margin-top: 42px;
-
-    font-family: 'Raleway';
-    font-style: normal;
     font-weight: 700;
     font-size: 22px;
     line-height: 26px;
+
 }
 
 
 
 .six_rectangles {
     display: flex;
+    padding-top: 23px;
     flex-direction: row;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px 20px;
+    align-content: center;
+    justify-content: center;
 
 }
 
 .canebière {
-    margin-top: 91px;
-    margin-bottom: -54px;
+
     background-color: #FFFFFF;
     border-radius: 20px;
     width: 246px;
@@ -483,9 +541,10 @@ body {
     margin-top: 7px;
 }
 
-/* buttoncliquable */
 
 
+
+/* POPULAIRE */
 
 
 
@@ -494,14 +553,19 @@ body {
     display: flex;
     flex-direction: column;
     background: #F2F2F2;
-    width: 420px;
-    height: 625px;
+    width: auto;
     border-radius: 20px;
     justify-content: space-evenly;
+    margin-right: 40px;
 
 }
 
+.title22 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
+}
 
 @media screen and (max-width: 992px) {
     #populaires {
@@ -526,24 +590,6 @@ body {
 
 
 
-.title22 {
-    /* align-items: flex-start; */
-    /* flex-basis: 30px; */
-    position: relative;
-    justify-content: left;
-    align-items: flex-start;
-    align-self: flex-start;
-}
-
-.title22 h2 {
-    margin-left: 37px;
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 26px;
-}
-
 @media screen and (max-width: 992px) {
     .title22 {
         align-items: baseline;
@@ -555,7 +601,8 @@ body {
 
 .trois_rectangles {
     display: flex;
-
+    padding-left: 40px;
+    padding-right: 40px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -578,8 +625,7 @@ body {
 
     background-color: #FFFFFF;
     border-radius: 20px;
-    /* width: 343px;
-    height: 144px; */
+
     position: relative;
 
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.307);
@@ -617,11 +663,9 @@ body {
     margin-top: 7px;
 }
 
-.text .star {
-
-    padding: 1px;
-    margin-left: 16px;
-    margin-top: 50px;
+.stars {
+    position: relative;
+    padding-top: 44px
 }
 
 /* ACTIVITES */
