Responsive de la section Hébergement + Populaires en mode Tablette

--- a/reset.css
+++ b/reset.css
@@ -84,12 +84,12 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
+  /* margin: 0;
   padding: 0;
   border: 0;
   /* font-size: 100%;
   font: inherit; */
-  vertical-align: baseline;
+  vertical-align: baseline; */
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -97,7 +97,7 @@ aside,
 details,
 figcaption,
 figure,
-footer,
+/* footer, */
 header,
 hgroup,
 menu,
