--- a/style.css
+++ b/style.css
@@ -60,12 +60,11 @@ body {
   padding-top: 44px;
 }
 
-.link_hebergement_marseilles :hover {
+.link_hebergement_marseilles:hover {
   color: #0065fc;
   border-top-color: #0065fc;
   border-top: 2px;
   border-top-style: solid;
-  border-top-color: #0065fc;
 }
 
 .link_activités_marseilles {
@@ -80,7 +79,7 @@ body {
   /* margin-right: 77px; */
 }
 
-.link_activités_marseilles :hover {
+.link_activités_marseilles:hover {
   color: #0065fc;
   position: relative;
   color: #0065fc;
@@ -89,7 +88,7 @@ body {
   border-top-style: solid;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .presentation {
     display: flex;
     flex-direction: column;
@@ -98,20 +97,20 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .logo {
     padding-left: 0px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   nav {
     display: flex;
     justify-content: space-evenly;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .liens {
     display: flex;
     padding-top: 48px;
@@ -119,7 +118,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .link_hebergement_marseilles {
     position: relative;
     border-top: none;
@@ -131,7 +130,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .link_activités_marseilles {
     position: relative;
     border-top: none;
@@ -143,7 +142,7 @@ body {
   }
 }
 
-/* recherche */
+/* RECHERCHE */
 
 .button_search h1 {
   position: relative;
@@ -287,7 +286,11 @@ body {
 
 /* TABLETTE */
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
+  body {
+    background: cornflowerblue;
+  }
+
   .filtres {
     position: relative;
 
@@ -296,7 +299,7 @@ body {
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
   .filter p {
     display: flex;
     padding-right: 10px;
@@ -305,7 +308,7 @@ body {
 
 /* TELEPHONE */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .filtres {
     display: flex;
     justify-content: space-evenly;
@@ -318,7 +321,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .filter {
     display: flex;
     justify-content: flex-start;
@@ -326,13 +329,13 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .filter p {
     display: flex;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .e {
     align-items: center;
     padding: 14px 10px 14px 10px;
@@ -343,7 +346,7 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .information {
     position: relative;
     padding: 20px;
@@ -357,23 +360,16 @@ body {
   position: relative;
   display: flex;
   padding-left: 50px;
-  gap: 40px;
+  gap: 2%;
   padding-top: 40px;
-}
-
-@media screen and (max-width: 992px) {
-  .hôtel_marseilles {
-    flex-wrap: wrap;
-  }
+  padding-right: 40px;
 }
 
 #hébergement_marseilles {
   position: relative;
   align-content: center;
   padding-top: 42px;
-  padding-left: 40px;
   padding-bottom: 46px;
-  padding-right: 40px;
   justify-content: center;
   background: #f2f2f2;
   width: 66%;
@@ -387,7 +383,8 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 26px;
-  padding-top: 40px;
+  padding-top: 70px;
+  padding-left: 40px;
 }
 
 #hébergement_marseilles h2 {
@@ -396,32 +393,35 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 26px;
+  padding-left: 40px;
 }
 
 .six_rectangles {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   padding-top: 23px;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 20px 20px;
-  align-content: center;
-  justify-content: center;
+  padding-left: 3%;
+  padding-right: 3%;
+  gap: 10% 2%;
+  width: 100%;
 }
 
 .canebière {
   background-color: #ffffff;
   border-radius: 20px;
-  width: 246px;
-  height: 199px;
+  width: 100%;
+  height: 100%;
   position: relative;
 
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.307);
 }
-
+.photo {
+  width: 100%;
+}
 .photo img {
   border: 5px solid #ffffff;
   border-radius: 20px 20px 0px 0px;
-
+  width: 100%;
   align-items: center;
   object-fit: cover;
 }
@@ -431,6 +431,7 @@ body {
   font-size: 16px;
   line-height: 19px;
   font-weight: 700;
+  white-space: -moz-pre-space;
 }
 
 .canebière p {
@@ -443,8 +444,30 @@ body {
   padding: 1px;
   margin-left: 16px;
   margin-top: 7px;
+  padding-bottom: 8px;
 }
 
+@media screen and (max-width: 991px) {
+  #hébergement_marseilles {
+    width: 100%;
+  }
+
+  .hôtel_marseilles {
+    flex-wrap: wrap;
+    padding-right: 50px;
+    gap: 50px;
+  }
+
+  #populaires {
+    display: flex;
+    flex-direction: row;
+    background: #f2f2f2;
+    width: 100%;
+    border-radius: 20px;
+
+    align-items: stretch;
+  }
+}
 /* POPULAIRE */
 
 #populaires {
@@ -454,10 +477,10 @@ body {
   width: 33%;
   border-radius: 20px;
 
-  margin-right: 40px;
+  align-items: stretch;
 }
 
-.title22 {
+.title_les_plus_populaires {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -466,8 +489,11 @@ body {
 
 .trois_rectangles {
   display: flex;
-  padding-left: 1%;
-  padding-right: 1%;
+  flex-direction: column;
+  flex-grow: 1;
+  padding-left: 10%;
+  padding-right: 10%;
+  justify-content: space-evenly;
 }
 
 .matin {
@@ -477,31 +503,74 @@ body {
   border-radius: 20px;
   position: relative;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.307);
+  height: 144px;
 }
 
 .text {
+  flex-direction: column;
+  display: flex;
+  padding-top: 16px;
+  gap: 10px;
+  width: 60%;
+
+  flex-grow: 1;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 700;
+  padding-left: 10px;
+}
+.text p {
+  font-size: 16px;
+  line-height: 14px;
+  font-weight: 400;
+}
+.photoo {
+  width: 40%;
+  height: 100%;
 }
 
 .matin .photoo img {
   border: 5px solid #ffffff;
   border-radius: 20px 0px 0px 20px;
-  width: 137px;
+  width: 100%;
   height: 144px;
   align-items: center;
   object-fit: cover;
 }
 
-.matin .photoo {
-}
-
-.matin span {
-}
-
-.matin p {
-}
-
 .stars {
-  position: relative;
+}
+
+@media screen and (max-width: 991px) {
+  #populaires {
+    display: flex;
+    flex-direction: column;
+    background: #f2f2f2;
+    width: 100%;
+    border-radius: 20px;
+
+    align-items: stretch;
+  }
+
+  .trois_rectangles {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    padding-left: 3%;
+    padding-right: 3%;
+    justify-content: space-evenly;
+    gap: 20px;
+    padding-bottom: 40px;
+    padding-top: 25px;
+  }
+  .title_les_plus_populaires {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 34px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
 
 /* ACTIVITES */
@@ -557,7 +626,7 @@ footer {
   align-items: center;
   padding-left: 50px;
   padding-top: 61px;
-  padding-right: 53px;
+  padding-right: 50px;
   justify-content: center;
 }
 
@@ -568,9 +637,12 @@ footer {
   background: #f2f2f2;
   width: 1339px;
   height: 225px;
+  padding-left: 50px;
+  padding-top: 61px;
+  padding-right: 50px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .bandeau {
     flex-direction: column;
     width: 100%;
@@ -581,14 +653,14 @@ footer {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .a_propos h1 {
     padding-bottom: 10px;
     padding-top: 20px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   footer {
     padding-left: 0;
     padding-top: 61px;
@@ -613,4 +685,10 @@ footer {
   padding-bottom: 12px;
 }
 
-/* Breackpoint */
+/* Breackpoint mobile */
+
+@media screen and (max-width: 767px) {
+  body {
+    background: red;
+  }
+}
