--- a/style.css
+++ b/style.css
@@ -581,25 +581,26 @@ body {
   font-weight: 700;
   font-size: 22px;
   line-height: 26px;
-  margin-left: 50px;
-  margin-top: 60px;
+  padding-left: 50px;
+  padding-top: 60px;
   padding-bottom: 18.47px;
 }
 
 .activités {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-evenly; */
-  gap: 43px;
-  margin-left: 50px;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 .activity {
   position: relative;
 
   background: #ffffff;
-  width: 302px;
-  height: 444.5px;
+  width: 100%;
+  height: 90%;
   border-radius: 20px;
 
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.307);
@@ -609,14 +610,45 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
-  margin-top: 20px;
-  margin-left: 19px;
+  padding-top: 20px;
+  padding-left: 19px;
+  padding-bottom: 20px;
+}
+.liens_activity {
+  width: 22%;
+}
+.image {
+  width: 100%;
+  object-fit: cover;
+  height: 85%;
 }
 
 .image img {
   box-sizing: border-box;
   border-radius: 20px 20px 0px 0px;
   object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.image2 {
+  width: 100%;
+  object-fit: cover;
+  height: 85%;
+}
+.image2 img {
+  box-sizing: border-box;
+  border-radius: 20px 20px 0px 0px;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1188px) {
+  .lieux {
+    /* font-size: 14px;
+    line-height: 17px; */
+    padding-top: 6px;
+  }
 }
 
 /* FOOTER */
